# api/v1alpha1/openapi.yaml
@@ -668,6 +668,64 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /api/v1/assessments/{id}/share:
+    post:
+      tags:
+        - assessment
+      description: Share an assessment
+      operationId: shareAssessment
+      parameters:
+        - name: id
+          in: path
+          description: ID of the assessment
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ShareAssessmentRequest'
+        required: true
+      responses:
+        "201":
+          description: Assessment shared successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Status'
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "404":
+          description: NotFound
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /api/v1/info:
     get:
       tags:
@@ -1223,12 +1281,18 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Snapshot'
+        permissions:
+          type: array
+          items:
+            type: string
+            enum: [read, edit, share, delete]
       required:
         - id
         - name
         - sourceType
         - createdAt
         - snapshots
+        - permissions
 
     AssessmentForm:
       type: object
@@ -1302,3 +1366,14 @@ components:
       required:
         - gitCommit
         - versionName
+
+    ShareAssessmentRequest:
+      type: object
+      properties:
+        userId:
+          type: string
+        orgId:
+          type: string
+      oneOf:
+        - required: [userId]
+        - required: [orgId]
